--- a/src/componentsClient/cv.css
+++ b/src/componentsClient/cv.css
@@ -1,10 +1,3 @@
-.shade {
-  border-radius: 20px 20px 20px 20px;
-  -moz-border-radius: 20px 20px 20px 20px;
-  -webkit-border-radius: 20px 20px 20px 20px;
-  border: 25px groove #1700c7;
-}
-
 .borderDef {
   border: 5px solid black;
 }
@@ -21,7 +14,7 @@
 
 .container11 {
   width: 900px;
-  height: 100%;
+  height: 80%;
   border: 5px solid black;
   padding: 20px;
 }
@@ -35,4 +28,9 @@
   display: flex;
   gap: 30px;
   justify-content: space-evenly;
+}
+
+body {
+  padding: 0;
+  margin: 0;
 }
