--- a/src/componentsClient/cv.css
+++ b/src/componentsClient/cv.css
@@ -14,7 +14,7 @@
 
 .container11 {
   width: 900px;
-  height: 80%;
+  height: 100%;
   border: 5px solid black;
   padding: 20px;
 }
@@ -30,7 +30,6 @@
   justify-content: space-evenly;
 }
 
-body {
-  padding: 0;
-  margin: 0;
+.headGreen {
+  color: "green";
 }
