--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
-
+/* .custom-list li::marker {
+  background-color: #007bff; 
+  color: black;
+  padding: 5px 10px;
+  font-weight: bold;
+  border-radius: 5px;
+} */
