--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,31 @@
-/* .custom-list li::marker {
-  background-color: #007bff; 
-  color: black;
-  padding: 5px 10px;
+
+.custom-list {
+  list-style: none;
+  padding: 0;
+  counter-reset: step-counter;
+}
+
+.custom-list li {
+  counter-increment: step-counter;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  font-weight: 500;
+}
+
+.custom-list li::before {
+  content: counter(step-counter);
   font-weight: bold;
-  border-radius: 5px;
-} */
+  font-size: 20px;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #007bff;
+  color: white;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
